@@ -3,6 +3,7 @@
 ** Unreleased
 
 *** Added:
+  - Query =GnuPG Pinentry= passphrase through the Emacs minibuffer.
   - Install =debbugs= package.
   - Mac OS: files removed by =Finder=, hence with "Put Back" feature enabled.
   - Enable =Rmail= email client.
